# cpp-multithredded-logger

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
inc/: multithreded_logger.hpp  thread_safe_queue.hpp
include/: multithreaded_logger.hpp  multithreded_logger.hpp
include/log_writers/: console_writer.h  file_writer.h
multithreaded_logger/: CMakeLists.txt
multithreaded_logger/include/: CMakeLists.txt
multithreded_logger/inc/: thread_safe_queue.hpp
multithreded_logger/test/: CMakeLists.txt
source/interfaces/: log_writer.h
source/log_writers/: console_writer.cpp  file_writer.cpp
source/utils/: log_level.cpp  log_level.h  record.h  timestamp.cpp  timestamp.h
test/: CMakeLists.txt  console_writer_test.cpp  log_level_test.cpp  multithreaded_logger_test.cpp  timestamp_test.cpp
